src/test/deca/context/invalid/created/testPass1/declClassExtendsInt.deca
// Description :
//    Test invalide : Opération d'addition sur des booléens
//
// Résultats :
//    Erreur contextuelle
//    Ligne 8: InvalidSuperclassDeclarationException: The superclass you declared is not a valid class.

class A extends int{}